deploy/k8s/delivery/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery
  namespace: freshcart
  labels:
    app.kubernetes.io/name: delivery
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: freshcart
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate: { maxUnavailable: 0, maxSurge: 1 }
  selector:
    matchLabels: { app.kubernetes.io/name: delivery }
  template:
    metadata:
      labels: { app.kubernetes.io/name: delivery, app.kubernetes.io/component: backend }
    spec:
      serviceAccountName: delivery
      automountServiceAccountToken: true
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        seccompProfile: { type: RuntimeDefault }
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels: { app.kubernetes.io/name: delivery }
      containers:
        - name: delivery
          image: freshcartacr.azurecr.io/freshcart/delivery:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            capabilities: { drop: [ALL] }
          ports:
            - { name: http, containerPort: 8080, protocol: TCP }
          livenessProbe:
            httpGet: { path: /alive, port: http }
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet: { path: /ready, port: http }
            initialDelaySeconds: 5
            periodSeconds: 10
          startupProbe:
            httpGet: { path: /ready, port: http }
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 30
          resources:
            requests: { cpu: '100m', memory: '256Mi', ephemeral-storage: '128Mi' }
            limits:   { cpu: '500m', memory: '512Mi', ephemeral-storage: '512Mi' }
          volumeMounts:
            - { name: tmp, mountPath: /tmp }
      volumes:
        - name: tmp
          emptyDir: {}
